<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.SecondScreenActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSec"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Second Screen"
        app:titleCentered="true"
        app:titleTextAppearance="@style/Theme.MyPalindrome"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/ic_back" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/welcome"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSec" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:text="@string/username"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

    <TextView
        android:id="@+id/tvSelectedUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_user"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnChooseUser"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginBottom="41dp"
        android:text="@string/button_choose_user"
        android:textSize="14sp"
        android:fontFamily="@font/poppins"
        android:background="@drawable/button_bg"
        app:backgroundTint="@color/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
