<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.FirstScreenActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Image"
        android:layout_width="116dp"
        android:layout_height="116dp"
        android:layout_marginTop="160dp"
        android:alpha="0"
        android:background="@drawable/ic_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:alpha="100" />

    <EditText
        android:id="@+id/tvName"
        android:layout_width="310dp"
        android:layout_height="46dp"
        android:layout_marginTop="62dp"
        android:alpha="0"
        android:background="@drawable/input_bg"
        android:hint="@string/name_input"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Image"
        tools:alpha="100" />

    <EditText
        android:id="@+id/tvPalindrome"
        android:layout_width="310dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:background="@drawable/input_bg"
        android:hint="@string/palindrome_input"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        tools:alpha="100" />

    <Button
        android:id="@+id/btnCheck"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="43dp"
        android:alpha="0"
        android:text="@string/button_check"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:background="@drawable/button_bg"
        app:backgroundTint="@color/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPalindrome"
        tools:alpha="100" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:alpha="0"
        android:text="@string/button_next"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        android:background="@drawable/button_bg"
        app:backgroundTint="@color/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCheck"
        tools:alpha="100" />

</androidx.constraintlayout.widget.ConstraintLayout>